--- a/cf_productivity_report/views/res_config_settings_views.xml
+++ b/cf_productivity_report/views/res_config_settings_views.xml
@@ -4,7 +4,7 @@
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="base.res_config_settings_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//div[contains(@class,'o_settings_container')]" position="inside">
+            <xpath expr="//sheet" position="inside">
                 <div class="app_settings_block" data-string="Productividad CF" string="Productividad CF">
                     <h2>Productividad CF</h2>
                     <div class="row mt16 o_settings_container">
