--- a/cf_productivity_report/views/company_productivity_views.xml
+++ b/cf_productivity_report/views/company_productivity_views.xml
@@ -4,20 +4,12 @@
         <field name="model">res.company</field>
         <field name="inherit_id" ref="base.view_company_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//sheet/notebook" position="inside">
-                <page string="Productividad CF">
-                    <group>
-                        <group>
-                            <field name="cf_user_repair_id"/>
-                            <field name="cf_user_ticket_id"/>
-                            <field name="cf_user_order_id"/>
-                        </group>
-                        <label string="Nota:" colspan="2"/>
-                        <p class="text-muted" colspan="2">
-                            Estos usuarios serán los únicos contabilizados cuando finalicen reparaciones, respondan tickets o validen entregas.
-                        </p>
-                    </group>
-                </page>
+            <xpath expr="//form/sheet" position="inside">
+                <group string="Productividad CF">
+                    <field name="cf_user_repair_id"/>
+                    <field name="cf_user_ticket_id"/>
+                    <field name="cf_user_order_id"/>
+                </group>
             </xpath>
         </field>
     </record>
