--- a/cf_productivity_report/views/productivity_views.xml
+++ b/cf_productivity_report/views/productivity_views.xml
@@ -14,44 +14,40 @@
         </field>
     </record>
 
+    <record id="view_cf_productivity_form" model="ir.ui.view">
+        <field name="name">cf.productivity.line.form</field>
+        <field name="model">cf.productivity.line</field>
+        <field name="arch" type="xml">
+            <form>
+                <sheet>
+                    <group>
+                        <field name="date"/>
+                        <field name="user_id"/>
+                        <field name="type"/>
+                        <field name="reason"/>
+                        <field name="ref_model"/>
+                        <field name="ref_id"/>
+                    </group>
+                    <chatter/>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
     <record id="view_cf_productivity_search" model="ir.ui.view">
         <field name="name">cf.productivity.line.search</field>
         <field name="model">cf.productivity.line</field>
         <field name="arch" type="xml">
-            <search>
+            <search string="Buscar líneas">
+                <filter name="today" string="Hoy" domain="[('date','&gt;=', (context_today()).strftime('%%Y-%%m-%%d 00:00:00')), ('date','&lt;=', (context_today()).strftime('%%Y-%%m-%%d 23:59:59'))]"/>
                 <field name="user_id"/>
-                <filter string="Hoy" name="today" domain="[('date','&gt;=', (context_today()).strftime('%%Y-%%m-%%d 00:00:00')), ('date','&lt;=', (context_today()).strftime('%%Y-%%m-%%d 23:59:59'))]" help="Registros de hoy"/>
-                <filter string="Ayer" name="yesterday" domain="[('date','&gt;=', ((context_today() - DateTimeDelta(days=1))).strftime('%%Y-%%m-%%d 00:00:00')), ('date','&lt;=', ((context_today() - DateTimeDelta(days=1))).strftime('%%Y-%%m-%%d 23:59:59'))]"/>
+                <field name="type"/>
                 <group expand="0" string="Agrupar por">
-                    <filter name="group_type" string="Tipo" context="{'group_by':'type'}"/>
-                    <filter name="group_user" string="Usuario" context="{'group_by':'user_id'}"/>
-                    <filter name="group_date" string="Fecha" context="{'group_by':'date:day'}"/>
+                    <filter name="grp_user" string="Usuario" context="{'group_by': 'user_id'}"/>
+                    <filter name="grp_type" string="Tipo" context="{'group_by': 'type'}"/>
+                    <filter name="grp_date" string="Fecha" context="{'group_by': 'date'}"/>
                 </group>
             </search>
-        </field>
-    </record>
-
-    <record id="view_cf_productivity_graph" model="ir.ui.view">
-        <field name="name">cf.productivity.line.graph</field>
-        <field name="model">cf.productivity.line</field>
-        <field name="arch" type="xml">
-            <graph string="Productividad" type="bar">
-                <field name="user_id" type="row"/>
-                <field name="type" type="col"/>
-                <field name="id" type="measure"/>
-            </graph>
-        </field>
-    </record>
-
-    <record id="view_cf_productivity_pivot" model="ir.ui.view">
-        <field name="name">cf.productivity.line.pivot</field>
-        <field name="model">cf.productivity.line</field>
-        <field name="arch" type="xml">
-            <pivot string="Productividad">
-                <field name="user_id" type="row"/>
-                <field name="type" type="col"/>
-                <field name="id" type="measure"/>
-            </pivot>
         </field>
     </record>
 </odoo>
