--- a/cf_productivity_report/views/company_productivity_views.xml
+++ b/cf_productivity_report/views/company_productivity_views.xml
@@ -9,6 +9,7 @@
                     <field name="cf_user_repair_id"/>
                     <field name="cf_user_ticket_id"/>
                     <field name="cf_user_order_id"/>
+                    <field name="productivity_reset_minutes"/>
                 </group>
             </xpath>
         </field>
