--- a/cf_productivity_report/views/productivity_views.xml
+++ b/cf_productivity_report/views/productivity_views.xml
@@ -8,6 +8,7 @@
                 <field name="user_id"/>
                 <field name="type"/>
                 <field name="reason"/>
+                <field name="interval_hhmmss"/>
                 <field name="ref_model"/>
                 <field name="ref_id"/>
             </tree>
@@ -25,10 +26,11 @@
                         <field name="user_id"/>
                         <field name="type"/>
                         <field name="reason"/>
-                        <field name="ref_model"/>
-                        <field name="ref_id"/>
+                        <field name="interval_seconds" readonly="1"/>
+                        <field name="interval_hhmmss" readonly="1"/>
+                        <field name="ref_model" readonly="1"/>
+                        <field name="ref_id" readonly="1"/>
                     </group>
-                    <chatter/>
                 </sheet>
             </form>
         </field>
@@ -39,9 +41,10 @@
         <field name="model">cf.productivity.line</field>
         <field name="arch" type="xml">
             <search string="Buscar líneas">
-                <filter name="today" string="Hoy" domain="[('date','&gt;=', (context_today()).strftime('%%Y-%%m-%%d 00:00:00')), ('date','&lt;=', (context_today()).strftime('%%Y-%%m-%%d 23:59:59'))]"/>
                 <field name="user_id"/>
                 <field name="type"/>
+                <filter name="only_orders" string="Sólo validaciones" domain="[('type','=','order')]"/>
+                <filter name="only_tickets" string="Sólo tickets" domain="[('type','in',('ticket','ticket_stage'))]"/>
                 <group expand="0" string="Agrupar por">
                     <filter name="grp_user" string="Usuario" context="{'group_by': 'user_id'}"/>
                     <filter name="grp_type" string="Tipo" context="{'group_by': 'type'}"/>
@@ -49,5 +52,24 @@
                 </group>
             </search>
         </field>
+    </record>
+
+    <record id="view_cf_productivity_pivot" model="ir.ui.view">
+        <field name="name">cf.productivity.line.pivot</field>
+        <field name="model">cf.productivity.line</field>
+        <field name="arch" type="xml">
+            <pivot string="Productividad">
+                <field name="user_id" type="row"/>
+                <field name="type" type="col"/>
+                <field name="interval_seconds" type="measure"/>
+            </pivot>
+        </field>
+    </record>
+
+    <record id="action_cf_productivity_lines" model="ir.actions.act_window">
+        <field name="name">Productividad</field>
+        <field name="res_model">cf.productivity.line</field>
+        <field name="view_mode">tree,form,pivot</field>
+        <field name="context">{}</field>
     </record>
 </odoo>
