--- a/cf_productivity_report/views/menu_productivity.xml
+++ b/cf_productivity_report/views/menu_productivity.xml
@@ -1,7 +1,11 @@
 <odoo>
-    <menuitem id="menu_cf_productivity_root" name="Productividad" sequence="10"/>
-    <menuitem id="menu_cf_productivity_dashboard" name="Resumen" parent="menu_cf_productivity_root" sequence="5"
-              action="action_cf_productivity_dashboard"/>
-    <menuitem id="menu_cf_productivity_lines" name="Registros" parent="menu_cf_productivity_root"
-              action="action_cf_productivity_lines" sequence="10"/>
+    <record id="action_cf_productivity_lines" model="ir.actions.act_window">
+        <field name="name">Dashboard de Productividad</field>
+        <field name="res_model">cf.productivity.line</field>
+        <field name="view_mode">tree,graph,pivot,form</field>
+        <field name="context">{'search_default_today': 1, 'group_by': ['type','user_id']}</field>
+    </record>
+
+    <menuitem id="menu_cf_productivity_root" name="Productividad CF" sequence="5"/>
+    <menuitem id="menu_cf_productivity_dashboard" name="Dashboard" parent="menu_cf_productivity_root" action="action_cf_productivity_lines" sequence="1"/>
 </odoo>
