--- a/cf_productivity_report/views/productivity_stats_views.xml
+++ b/cf_productivity_report/views/productivity_stats_views.xml
@@ -23,7 +23,7 @@
             name="Tiempos medios entre validaciones"
             parent="menu_cf_productivity_root"
             action="action_cf_productivity_stats"
-            groups="base.group_system"
+            groups="base.group_no_one"
             sequence="2"/>
 
   
