--- a/cf_productivity_report/views/menu_productivity.xml
+++ b/cf_productivity_report/views/menu_productivity.xml
@@ -3,7 +3,7 @@
         <field name="name">Dashboard de Productividad</field>
         <field name="res_model">cf.productivity.line</field>
         <field name="view_mode">tree,graph,pivot,form</field>
-        <field name="context">{'search_default_today': 1, 'group_by': ['type','user_id']}</field>
+        <field name="context">{'group_by': ['type','user_id']}</field>
     </record>
 
     <menuitem id="menu_cf_productivity_root" name="Productividad CF" sequence="5"/>
