--- a/cf_productivity_report/views/productivity_views.xml
+++ b/cf_productivity_report/views/productivity_views.xml
@@ -1,78 +1,34 @@
 <odoo>
-  <record id="view_cf_productivity_tree" model="ir.ui.view">
-    <field name="name">cf.productivity.line.tree</field>
-    <field name="model">cf.productivity.line</field>
-    <field name="arch" type="xml">
-      <tree default_order="date desc">
-        <field name="date"/>
-        <field name="user_id"/>
-        <field name="type"/>
-        <field name="reason"/>
-        <field name="ref"/>
-      </tree>
-    </field>
-  </record>
+    <record id="view_cf_productivity_tree" model="ir.ui.view">
+        <field name="name">cf.productivity.line.tree</field>
+        <field name="model">cf.productivity.line</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="date"/>
+                <field name="user_id"/>
+                <field name="type"/>
+                <field name="reason"/>
+                <field name="ref_model"/>
+                <field name="ref_id"/>
+                <field name="average_time_20" string="Tiempo medio (20 val.)"/>
+            </tree>
+        </field>
+    </record>
 
-  <record id="view_cf_productivity_form" model="ir.ui.view">
-    <field name="name">cf.productivity.line.form</field>
-    <field name="model">cf.productivity.line</field>
-    <field name="arch" type="xml">
-      <form string="Línea de productividad">
-        <sheet>
-          <group>
-            <field name="date"/>
-            <field name="user_id"/>
-            <field name="type"/>
-            <field name="reason"/>
-            <field name="ref"/>
-          </group>
-        </sheet>
-      </form>
-    </field>
-  </record>
-
-  <record id="view_cf_productivity_graph" model="ir.ui.view">
-    <field name="name">cf.productivity.line.graph</field>
-    <field name="model">cf.productivity.line</field>
-    <field name="arch" type="xml">
-      <graph string="Productividad" type="bar">
-        <field name="user_id" type="row"/>
-        <field name="type" type="col"/>
-        <field name="id" type="measure" string="Acciones" widget="statinfo"/>
-      </graph>
-    </field>
-  </record>
-
-  <record id="view_cf_productivity_pivot" model="ir.ui.view">
-    <field name="name">cf.productivity.line.pivot</field>
-    <field name="model">cf.productivity.line</field>
-    <field name="arch" type="xml">
-      <pivot string="Productividad">
-        <field name="user_id" type="row"/>
-        <field name="type" type="col"/>
-        <field name="date" interval="day"/>
-        <field name="id" type="measure" string="Acciones"/>
-      </pivot>
-    </field>
-  </record>
-
-  <record id="view_cf_productivity_search" model="ir.ui.view">
-    <field name="name">cf.productivity.line.search</field>
-    <field name="model">cf.productivity.line</field>
-    <field name="arch" type="xml">
-      <search string="Buscar líneas">
-        <filter name="today" string="Hoy"
-                domain="[('date','&gt;=', context_today()),
-                         ('date','&lt;', (context_today() + datetime.timedelta(days=1)))]"/>
-        <separator/>
-        <field name="user_id"/>
-        <field name="type"/>
-        <group expand="0" string="Agrupar por">
-          <filter name="grp_user" string="Usuario" context="{'group_by': 'user_id'}"/>
-          <filter name="grp_type" string="Tipo" context="{'group_by': 'type'}"/>
-          <filter name="grp_date" string="Fecha (día)" context="{'group_by': 'date:day'}"/>
-        </group>
-      </search>
-    </field>
-  </record>
+    <record id="view_cf_productivity_search" model="ir.ui.view">
+        <field name="name">cf.productivity.line.search</field>
+        <field name="model">cf.productivity.line</field>
+        <field name="arch" type="xml">
+            <search string="Buscar líneas">
+                <field name="user_id"/>
+                <field name="type"/>
+                <filter name="only_tickets" string="Solo tickets" domain="[('type','=','ticket')]"/>
+                <group expand="0" string="Agrupar por">
+                    <filter name="grp_user" string="Usuario" context="{'group_by': 'user_id'}"/>
+                    <filter name="grp_type" string="Tipo" context="{'group_by': 'type'}"/>
+                    <filter name="grp_date" string="Fecha" context="{'group_by': 'date'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
 </odoo>
