--- a/cf_productivity_report/views/menu_productivity.xml
+++ b/cf_productivity_report/views/menu_productivity.xml
@@ -3,14 +3,20 @@
         <field name="name">Informe de productividad</field>
         <field name="res_model">cf.productivity.line</field>
         <field name="view_mode">tree,graph,pivot,form</field>
-        <field name="context">{'group_by': ['type','user_id']}</field>
+        <field name="context">
+            {
+                'group_by': ['date:day','type','user_id']
+            }
+        </field>
     </record>
 
+    <!-- Menú principal como pestaña en Inventario -->
     <menuitem id="menu_cf_productivity_root"
               name="Informe de productividad"
               parent="stock.menu_stock_root"
               sequence="90"/>
 
+    <!-- Acceso directo al dashboard con el contexto por defecto -->
     <menuitem id="menu_cf_productivity_dashboard"
               name="Dashboard"
               parent="menu_cf_productivity_root"
