--- a/cf_productivity_report_pro_final/views/productivity_ranking_views.xml
+++ b/cf_productivity_report_pro_final/views/productivity_ranking_views.xml
@@ -1,7 +1,7 @@
 
 <odoo>
   <data>
-    <menuitem id="menu_cf_productivity_ranking" name="Ranking" parent="menu_cf_productivity_root" sequence="30"/>
+    <menuitem id="menu_cf_productivity_ranking" name="🏆 Ranking" parent="menu_cf_productivity_root" sequence="30"/>
 
     <record id="action_cf_productivity_ranking" model="ir.actions.act_window">
       <field name="name">Ranking diario</field>
