--- a/cf_productivity_report_pro_final/views/productivity_views.xml
+++ b/cf_productivity_report_pro_final/views/productivity_views.xml
@@ -2,8 +2,8 @@
 <odoo>
   <data>
     <!-- Menú principal -->
-    <menuitem id="menu_cf_productivity_root" name="Productividad" sequence="10"/>
-    <menuitem id="menu_cf_productivity_report" name="Informe de productividad" parent="menu_cf_productivity_root" sequence="10"/>
+    <menuitem id="menu_cf_productivity_root" name="📊 Productividad" sequence="10"/>
+    <menuitem id="menu_cf_productivity_report" name="🧾 Informe de productividad" parent="menu_cf_productivity_root" sequence="10"/>
 
     <!-- Action window -->
     <record id="action_cf_productivity_report" model="ir.actions.act_window">
@@ -20,14 +20,22 @@
       <field name="name">cf.productivity.report.tree</field>
       <field name="model">cf.productivity.report</field>
       <field name="arch" type="xml">
-        <tree string="Informe de Productividad" create="1" edit="0">
+        <tree string="Informe de Productividad" create="1" edit="0"
+          decoration-success="time_since_previous_secs &lt; 60 and not is_pause"
+          decoration-warning="time_since_previous_secs &gt;= 60 and time_since_previous_secs &lt; 300 and not is_pause"
+          decoration-danger="time_since_previous_secs &gt;= 300 and not is_pause"
+          decoration-muted="is_pause">
+
           <field name="date"/>
           <field name="user_id"/>
           <field name="action_type"/>
           <field name="reason"/>
 <field name="time_since_previous" readonly="1"/>
-          <field name="is_pause"/>
-          <field name="avg_time_today" readonly="1"/>
+          <field name="time_since_previous_secs" invisible="1"/>
+<field name="is_pause"/>
+          <field name="avg_time_today" widget="float_time"/>
+          <field name="validations_today"/>
+          <field name="rank_today" readonly="1" widget="float_time"/>
           <field name="model"/>
           <field name="res_id"/>
           <field name="note"/>
@@ -48,8 +56,9 @@
               <field name="action_type"/>
               <field name="reason"/>
               <field name="time_since_previous" readonly="1"/>
-              <field name="is_pause" readonly="1"/>
-              <field name="avg_time_today" readonly="1"/>
+          <field name="time_since_previous_secs" invisible="1"/>
+<field name="is_pause" readonly="1"/>
+              <field name="avg_time_today" readonly="1" widget="float_time"/>
               <field name="model"/>
               <field name="res_id"/>
             </group>
