--- a/cf_productivity_report_pro_final/views/mail_template.xml
+++ b/cf_productivity_report_pro_final/views/mail_template.xml
@@ -1,7 +1,6 @@
-
 <odoo>
-  <data noupdate="1">
-    <record id="mail_template_cf_productivity_daily" model="mail.template">
+  <data>
+<record id="mail_template_cf_productivity_daily" model="mail.template">
       <field name="name">Resumen diario de productividad</field>
       <field name="model_id" ref="base.model_res_users"/>
       <field name="subject">Resumen diario de productividad - ${object.name}</field>
