--- a/cf_productivity_report_pro_final/views/dashboard_views.xml
+++ b/cf_productivity_report_pro_final/views/dashboard_views.xml
@@ -1,12 +1,16 @@
+
 <odoo>
   <data>
-<menuitem id="menu_cf_productivity_dashboard" name="📊 Dashboard" parent="menu_cf_productivity_root" sequence="5"/>
-    <record id="action_cf_productivity_dashboard" model="ir.actions.act_window">
-      <field name="name">Dashboard de Productividad</field>
-      <field name="res_model">cf.productivity.report</field>
-      <field name="view_mode">graph,pivot,tree</field>
-      <field name="context">{}</field>
+    <record id="view_cf_dashboard_placeholder" model="ir.ui.view">
+      <field name="name">cf.productivity.dashboard.placeholder</field>
+      <field name="model">cf.productivity.report</field>
+      <field name="arch" type="xml">
+        <tree string="Panel Rápido (Placeholder)">
+          <field name="name"/>
+          <field name="user_id"/>
+          <field name="date_time"/>
+        </tree>
+      </field>
     </record>
-    <menuitem id="menu_cf_productivity_dashboard_action" parent="menu_cf_productivity_dashboard" action="action_cf_productivity_dashboard"/>
   </data>
 </odoo>
