--- a/cf_productivity_report_pro_final/views/mail_template.xml
+++ b/cf_productivity_report_pro_final/views/mail_template.xml
@@ -1,6 +1,7 @@
+
 <odoo>
-  <data>
-<record id="mail_template_cf_productivity_daily" model="mail.template">
+  <data noupdate="1">
+    <record id="mail_template_cf_productivity_daily" model="mail.template">
       <field name="name">Resumen diario de productividad</field>
       <field name="model_id" ref="base.model_res_users"/>
       <field name="subject">Resumen diario de productividad - ${object.name}</field>
@@ -9,11 +10,7 @@
       <field name="body_html" type="html">
         <![CDATA[
           <p>Hola ${object.name},</p>
-          <p>Adjuntamos el resumen diario de productividad.</p>
-          <ul>
-            <li>Acciones hoy: (ver menú Productividad → Ranking / Estadísticas)</li>
-            <li>Tiempo medio: ver estadísticas</li>
-          </ul>
+          <p>Este es un resumen automático de productividad.</p>
         ]]>
       </field>
     </record>
