--- a/cf_productivity_report_pro_final/views/productivity_views.xml
+++ b/cf_productivity_report_pro_final/views/productivity_views.xml
@@ -1,100 +1,34 @@
+
 <odoo>
   <data>
-<!-- Menú principal -->
+    <!-- Menú principal -->
     <menuitem id="menu_cf_productivity_root" name="📊 Productividad" sequence="10"/>
-    <menuitem id="menu_cf_productivity_report" name="🧾 Informe de productividad" parent="menu_cf_productivity_root" sequence="10"/>
+    <menuitem id="menu_cf_productivity_report" name="🧾 Informe" parent="menu_cf_productivity_root" sequence="10"/>
+    <menuitem id="menu_cf_productivity_ranking" name="🏆 Ranking" parent="menu_cf_productivity_root" sequence="20"/>
+    <menuitem id="menu_cf_productivity_stats" name="📈 Estadísticas" parent="menu_cf_productivity_root" sequence="30"/>
 
-    <!-- Action window -->
-    <record id="action_cf_productivity_report" model="ir.actions.act_window">
-      <field name="name">Informe de productividad</field>
-      <field name="res_model">cf.productivity.report</field>
-      <field name="view_mode">tree,graph,pivot,form,kanban</field>
-      <field name="context">{'search_default_group_by_user': 1}</field>
-    </record>
-
-    <menuitem id="menu_cf_productivity_report_action" parent="menu_cf_productivity_report" action="action_cf_productivity_report" sequence="10"/>
-
-    <!-- Tree view -->
+    <!-- Vista list del reporte -->
     <record id="view_cf_productivity_report_tree" model="ir.ui.view">
       <field name="name">cf.productivity.report.tree</field>
       <field name="model">cf.productivity.report</field>
       <field name="arch" type="xml">
-        <tree string="Informe de Productividad" create="1" edit="0"
-          decoration-success="time_since_previous_secs &lt; 60 and not is_pause"
-          decoration-warning="time_since_previous_secs &gt;= 60 and time_since_previous_secs &lt; 300 and not is_pause"
-          decoration-danger="time_since_previous_secs &gt;= 300 and not is_pause"
-          decoration-muted="is_pause">
-
-          <field name="date"/>
+        <tree string="Informe de Productividad" create="true" edit="true">
+          <field name="name"/>
           <field name="user_id"/>
           <field name="action_type"/>
           <field name="reason"/>
-<field name="time_since_previous" readonly="1"/>
-          <field name="time_since_previous_secs" invisible="1"/>
-<field name="is_pause"/>
-          <field name="avg_time_today" widget="float_time"/>
-          <field name="validations_today"/>
-          <field name="rank_today" readonly="1" widget="float_time"/>
-          <field name="model"/>
-          <field name="res_id"/>
-          <field name="note"/>
+          <field name="date_time"/>
+          <field name="time_since_previous"/>
         </tree>
       </field>
     </record>
 
-    <!-- Form view -->
-    <record id="view_cf_productivity_report_form" model="ir.ui.view">
-      <field name="name">cf.productivity.report.form</field>
-      <field name="model">cf.productivity.report</field>
-      <field name="arch" type="xml">
-        <form string="Línea de productividad">
-          <sheet>
-            <group>
-              <field name="date"/>
-              <field name="user_id"/>
-              <field name="action_type"/>
-              <field name="reason"/>
-              <field name="time_since_previous" readonly="1"/>
-          <field name="time_since_previous_secs" invisible="1"/>
-<field name="is_pause" readonly="1"/>
-              <field name="avg_time_today" readonly="1" widget="float_time"/>
-              <field name="model"/>
-              <field name="res_id"/>
-            </group>
-            <notebook>
-              <page string="Notas">
-                <field name="note" nolabel="1"/>
-              </page>
-            </notebook>
-          </sheet>
-          <chatter/>
-        </form>
-      </field>
+    <record id="action_cf_productivity_report" model="ir.actions.act_window">
+      <field name="name">Informe de Productividad</field>
+      <field name="res_model">cf.productivity.report</field>
+      <field name="view_mode">tree,form,pivot,graph</field>
     </record>
 
-    <!-- Graph & Pivot defaults -->
-    <record id="view_cf_productivity_report_graph" model="ir.ui.view">
-      <field name="name">cf.productivity.report.graph</field>
-      <field name="model">cf.productivity.report</field>
-      <field name="arch" type="xml">
-        <graph string="Acciones por usuario" type="bar">
-          <field name="user_id" type="row"/>
-          <field name="date" type="col"/>
-          <field name="id" type="measure"/>
-        </graph>
-      </field>
-    </record>
-
-    <record id="view_cf_productivity_report_pivot" model="ir.ui.view">
-      <field name="name">cf.productivity.report.pivot</field>
-      <field name="model">cf.productivity.report</field>
-      <field name="arch" type="xml">
-        <pivot string="KPIs de productividad">
-          <field name="user_id" type="row"/>
-          <field name="action_type" type="col"/>
-          <field name="id" type="measure" string="Acciones" />
-        </pivot>
-      </field>
-    </record>
+    <menuitem id="menu_cf_productivity_report_action" parent="menu_cf_productivity_report" action="action_cf_productivity_report" sequence="10"/>
   </data>
 </odoo>
