--- a/cf_stock_bat100_final/views/stock_lot_views.xml
+++ b/cf_stock_bat100_final/views/stock_lot_views.xml
@@ -23,11 +23,11 @@
         </field>
     </record>
 
-    <!-- Filtro BAT100 en la búsqueda -->
+    <!-- Vista de búsqueda (filtro BAT100) -->
     <record id="view_stock_lot_search_bat100" model="ir.ui.view">
         <field name="name">stock.lot.search.bat100</field>
         <field name="model">stock.lot</field>
-        <field name="inherit_id" ref="stock.view_stock_lot_filter"/>
+        <field name="inherit_id" ref="stock.view_production_lot_search"/>
         <field name="arch" type="xml">
             <xpath expr="//filter[@name='serial']" position="after">
                 <filter name="bat100_true" string="BAT100" domain="[('bat100','=',True)]"/>
