--- a/cf_stock_bat100_final/views/stock_move_line_views.xml
+++ b/cf_stock_bat100_final/views/stock_move_line_views.xml
@@ -29,4 +29,16 @@
             </form>
         </field>
     </record>
+
+    <!-- Campo BAT100 visible en el wizard de operaciones detalladas -->
+    <record id="view_move_line_detailed_operations_bat100" model="ir.ui.view">
+        <field name="name">stock.move.line.detailed.operations.bat100</field>
+        <field name="model">stock.move.line</field>
+        <field name="inherit_id" ref="stock.view_stock_move_line_detailed_operations"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='lot_id']" position="after">
+                <field name="bat100" widget="boolean_toggle"/>
+            </xpath>
+        </field>
+    </record>
 </odoo>
